--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -7028,9 +7028,9 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Miscellaneous (minor)
 
--Loosened username restrictions for the "Admin Area => Security => Interface Login" setting (so only validity check is a 4 character MINIMUM)
+-Added to the "on-chain-stats" plugin: Solana Epoch Information, Solana Node Count history chart, Solana Node GeoLocation map, and Solana Node Version pie chart
 
--Added to the "on-chain-stats" plugin: Solana Node Count history chart, Solana Node GeoLocation map, and Solana Node Version pie chart
+-Loosened username restrictions for the "Admin Area => Security => Interface Login" setting (so only validity check is a 4 character MINIMUM)
 
 -Increased amount of currency / crypto maximum decimals allowed (in the "Asset Tracking => Currency Support" Admin Config)
 
