UX, refactoring, final(?) solana nodes geolocation map polishing / fixes
UX, refactoring, final(?) solana nodes geolocation map polishing / fixes

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -129,19 +129,16 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
-"this will remove any price chart data" on deletion of assets should really be: "this will delete any cached price chart files, but you will still need to delete any related config in the charts / alerts section"
-
-
 Do a pie chart for the Solana Version data.
-
-
-Disable the on-chain-stats, and make sure there are no javascript errors related to opening the 'more stats' modal.
 
 
 Add light chart support to Solana node count charting.
 
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
+Change the navigation link name for plugins in the admin area to "Addon Plugins" (including the page title). Then create a new main navigation Top level entry (under "Admin Area" and "User Area") with the same name, that only shows if an installed plugin is configured to show in that as a sub menu navigation entry.
 
 
 Add full redhat support for auto-installer.
