--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -132,10 +132,20 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 Do a pie chart for the Solana Version data.
 
 
-Disable the on-chain-stats, and make sure there are no javascript errors related to opening the 'more stats' modal.
-
-
 Add light chart support to Solana node count charting.
+
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
+Change the navigation link name for plugins in the admin area to "Addon Plugins" (including the page title). Then create a new main navigation Top level entry (under "Admin Area" and "User Area") with the same name, that only shows if an installed plugin is configured to show in that as a sub menu navigation entry.
+
+
+Add full redhat support for auto-installer.
+
+
+Fedora's news feed:
+https://fedoramagazine.org/feed/
 
 
 Add an admin config setting, to enable BTC / ETH / SOL on-chain-stats, with checkbox choices.
@@ -145,16 +155,6 @@ If plugin runtime is all | webhook, put in parentheses next to this summary to v
 
 
 Do a review of how everything renders in Firefox (as it's been a year since last FF review).
-
-
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-
-Add full redhat support for auto-installer.
-
-
-Fedora's news feed:
-https://fedoramagazine.org/feed/
 
 
 ===============================================================================
