--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -7026,6 +7026,8 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Fixed issue on "My Portfolio" page, where average-paid-per-unit of asset was hard-coded to an 8 decimal maximum (causing low value tokens to NOT display gain / loss data)
 
+-BUG FIX: Fixed AlphaVantage Stock (FREE tier) issues, related to preserving cached data, after the daily live requests limits have been reached
+
 -BUG FIX: Fixed an issue in the throttling system, related to sub-second throttling profiles
 
 -BUG FIX: Fixes for the plugin system
