--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -131,16 +131,10 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
-Do a review of how everything renders in Firefox (as it's been a year since last FF review).
-
-
-Review placement of $ct['cache']->api_throttle_cache() in all ajax files. We might have it running twice in some cases.
-
-
 Do a pie chart for the Solana Version data.
 
 
-Add light chart support to Solana node count charting.
+Stock overview cache time seems too short. Double check things, IF our explicit condition refactor did not fix it.
 
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
