--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -7034,7 +7034,9 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Miscellaneous
 
--Added to the "on-chain-stats" plugin: Solana Epoch Information, Solana Node Count history chart, Solana Node GeoLocation map, and Solana Node Version pie chart
+-Revised plugin system, with the new feature to expose plugins in the interface within a new primary navigation menu named "Plugin Area" (which will only show if a plugin's dev config is flagged to show there...see plugins documentation for more details)
+
+-Added Solana network stats, to the "on-chain-stats" plugin (shows in the new "Plugin Area" navigation menu)
 
 -Loosened username restrictions for the "Admin Area => Security => Interface Login" setting (so only validity check is a 4 character MINIMUM)
 
