--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -131,30 +131,10 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
-The 'unsaved changes' notice does NOT work clicking on a plugin nav menu entry, after updating the user OR admin areas. 
-
-
-Make sure enabling privacy mode while logged into the admin area still logs us out, including when in the user area. In any admin area (including the login page), enabling or disabling privacy mode currently throws a JavaScript error.
-
-
-
-Login to admin area, to assure our nav menu logic additions for plugin menu entries did not mess that area up. Test with a nav menu plugin enabled AND disabled.
+Make sure all on-chain-stats events / charts / etc cache files are deleted, IF the plugin is disabled. Maybe some type of generic uninstall hook, that checks all STANDARD plugin cache paths, and deletes any that exist?
 
 
 Move ALL $ct['dev']['tasks_time_offset'] logic into the update_cache() function, BUT only activates IF cache time is 30 minutes or higher.
-
-
-=================================================================
-
-Add the reposition animation to the other compct submenu logic, where it's only moved slightly.
-
-The final 'else if' condition after !parent_showing should be !elm_showing, which probably would solve the bad offset we are having in the ADMIN area (when viewing on my laptop).
-
-Ideally, instead of sliding all the way to the top of the visible screen, we should try and accurately calculate just sliding up enough to show the entire compact submenu (for better UX). This can be accomplised by getting the CURRENT 'top' CSS value of the element, parsing out the numeric value, and adjusting it based off our existing 'diff' var value. 
-
-When in the ADMIN area, the INITIAL compact submenu showing is very low (barely or cannot see it on bottom left, until scrolling auto-positions it much better). At least on my laptop...the user and plugin areas render ok.
-
-=================================================================
 
 
 Do a pie chart for the Solana Version data.
