--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -131,8 +131,31 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
-Fedora's news feed:
-https://fedoramagazine.org/feed/
+Verticle scroll position is wonky in the plugins area, IF last-visted beforehand was a user area subsection.
+
+
+Do a pie chart for the Solana Version data.
+
+
+Store Solana "Transactions Since Genesis", and every 24 hours see how many more TXs there are, for a Daily TXs chart.
+
+
+Try and squeeze in color maps for the types of Solana nodes into the map footer.
+
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
+Cleanup any EXTRA instances of gc_collect_cycles(), as it slows runtimes (especially in loops!)
+
+
+Create a function is_valid_plugin(), to use in plugins-init.php, in $ct['gen']->refresh_plugins_list(), and in the cached config upgrade system (make sure the cached config upgrade routine leaves alone "plugin_status" == off plugins that exist in the plugins directory, that were added by the plugins directory scanner [NOT hard-coded in the DEFAULT config]. Right now, that does NOT seem to be the case).
+
+
+See if we can use a more efficient coingecko marketcap data call, than what we use now. On a Raspberry Pi v4, we add at least 1.3 seconds to the UI runtime, IF marketcap asset max is set to the 1000 top coins. Maybe we can build a BATCHED single call, that includes mcap data (like we do for their 'simple price' API).
+
+
+DOUBLE-CHECK app / plugin version upgrading overhaul, including per-setting resets, upgrade / downgrade auto-update, and high security mode.
 
 
 ========================================================
@@ -142,39 +165,11 @@ cron => notify (error): the ETH trade value "0" for the "loopring_amm" exchange 
 ========================================================
 
 
-Make sure all on-chain-stats events / charts / etc cache files are deleted, IF the plugin is disabled. Maybe some type of generic uninstall hook, that checks all STANDARD plugin cache paths, and deletes any that exist?
-
-
-Move ALL $ct['dev']['tasks_time_offset'] logic into the update_cache() function, BUT only activates IF cache time is 30 minutes or higher.
-
-
+========================================================
 Allowing 2-deep config settings (with config category being the root) to be scanned for addition / removal OVERCOMPLICATES THE UPGRADE LOGIC. Strip it out, and we no longer need to deny certain additions / removals (in developer-config.php). 
-----
+
 The only thing we really need to do for 2-deep values is make sure their PARENT'S array type (associative or numeric / auto) is same as the default config's (which we do already, BUT SHOULD ALSO CHECK THAT LOGIC TOO, TO STRIP OUT ANYTHING RELATED TO AUTO-UPGRADING BEYOND ARRAY TYPE COMPARISON MISMATCH TRIGGERING A *FULL* SETTING RESET [NOT JUST TWEAKING A FEW SELECTIVE VALUES]).
-
-
-DOUBLE-CHECK app / plugin version upgrading overhaul, including per-setting resets, upgrade / downgrade auto-update, and high security mode.
-
-
-Cleanup any EXTRA instances of gc_collect_cycles(), as it slows runtimes (especially in loops!)
-
-
-See if we can use a more efficient coingecko marketcap data call, than what we use now. On a Raspberry Pi v4, we add at least 1.3 seconds to the UI runtime, IF marketcap asset max is set to the 1000 top coins. Maybe we can build a BATCHED single call, that includes mcap data (like we do for their 'simple price' API).
-
-
-Create a function is_valid_plugin(), to use in plugins-init.php, in $ct['gen']->refresh_plugins_list(), and in the cached config upgrade system (make sure the cached config upgrade routine leaves alone "plugin_status" == off plugins that exist in the plugins directory, that were added by the plugins directory scanner [NOT hard-coded in the DEFAULT config]. Right now, that does NOT seem to be the case).
-
-
-Do a pie chart for the Solana Version data.
-
-
-Store Solana "Transactions Since Genesis", and every 24 hours see how many more TXs there are, for a Daily TXs chart.
-
-
-Put days / hours left in current Solana epoch in the epoch info area, and try and squeeze in color maps for the types of Solana nodes into the map footer.
-
-
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+========================================================
 
 
 On the plugins admin page, add a title "How to make your own custom plugin", with a link to the plugin documentation on github.
@@ -528,6 +523,9 @@ Do a gains / losses bar chart for the gains / losses summary (tooltip, like bala
 RESEARCH / MAYBE SECTION (*NOT* PRIORITIZED)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+Make sure all on-chain-stats events / charts / etc cache files are deleted, IF the plugin is disabled. Maybe some type of generic uninstall hook, that checks all STANDARD plugin cache paths, and deletes any that exist?
 
 
 Make default btc exchange in config.php optional, and auto-configure if invalid or left blank, based off the default primary currency setting (still log errors though). Additionally, consider defaulting to USD if the primary currency setting is invalid / blank as well (as long as we also error log any detected issues there too)??
