--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -7030,6 +7030,8 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Fixed AlphaVantage Stock (FREE tier) issues, related to preserving cached data, after the daily live requests limits have been reached
 
+-BUG FIX: Fixed edge-case in API data caching, when switching to a different server for THE SAME EXACT RPC DATA (for blockchain node RPCs, etc)
+
 -BUG FIX: Fixed issues in the throttling system, including sub-second throttling profiles, and deleting stale cache data
 
 -BUG FIX: Fixes for duplicate asset search result detection (per-registered-exchange API)
@@ -7042,7 +7044,7 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -Revised plugin system, with the new feature to expose plugins in the interface within a new primary navigation menu named "Plugin Area" (which will only show if a plugin's dev config is flagged to show there...see plugins documentation for more details)
 
--Added Solana network stats, to the "on-chain-stats" plugin (shows in the new "Plugin Area" navigation menu)
+-Added Bitcoin and Solana network stats, to the "on-chain-stats" plugin (shows in the new "Plugin Area" navigation menu automatically in NEW installs, but must be activated in "Admin Area => Plugins" for EXISTING installations)
 
 -Loosened username restrictions for the "Admin Area => Security => Interface Login" setting (so only validity check is a 4 character MINIMUM)
 
